better nav via subheads

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Russell Matney
 markdown: redcarpet
 pygments: true
-subhead: Software and Fiction Engineer
+subhead: web and ios apps. fiction and writing. engineer at Moveline.
 future: false
 permalink: none
