cuts into non-responsive subhead

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Russell Matney
 markdown: redcarpet
 pygments: true
-subhead: web and ios apps. fiction and writing. engineer at Moveline.
+subhead: web and ios apps. fiction and writing.
 future: false
 permalink: none
