more notes and rss feed

--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ subhead: web and ios apps. fiction and writing.
 future: false
 permalink: none
 author: Russell Matney
+
+url: http://russmatney.com/
+description: "Web tech and other things in code"
