--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Russell Matney
 markdown: redcarpet
-pygments: true
+highlighter: true
 subhead: web and ios apps. fiction and writing.
 future: false
 permalink: none
