--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : russmatney
+      short_name : russellmatney
 
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
