--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-# This is the default format. 
+# This is the default format.
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:categories/:year/:month/:day/:title 
+permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: 'pygments'
@@ -12,7 +12,6 @@ title : Techsposure and some stories
 tagline: Fiction and Tech
 author :
   name : Russell Matney
-  email : russ@moveline.com
   github : russmatney
   twitter : russmatney
 
@@ -88,9 +87,9 @@ JB :
   # Set 'provider' to false to turn analytics off globally.
   #
   analytics :
-    provider : mixpanel
-    mixpanel :
-        token : 'f975ab92a4ccc2ed3da0e2124a4ba71f'
+    provider : google
+    google:
+      tracking_id: 'UA-29545122-1'
 
   # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
