--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,9 @@ author :
   name : Russell Matney
   github : russmatney
   twitter : russmatney
+  about: /about.html
+  tumblr: russmatney
+  linkedin: russellmatney
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
