links to medium profile

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author :
   about: /about.html
   tumblr: russmatney
   linkedin: russellmatney
+  medium: russmatney
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
