--- a/.gitattributes
+++ b/.gitattributes
@@ -46,4 +46,5 @@
 *.pdf lfs-file
 *.ttf lfs-file
 *.gif filter=lfs diff=lfs merge=lfs -text
+*.GIF filter=lfs diff=lfs merge=lfs -text
 *.GIF !text !filter !merge !diff
